# dscrobbler

./: .bzrignore  .gitignore  ChangeLog  Makefile.am  TODO  com.burtonini.Scrobbler.service  com.burtonini.Scrobbler.service.in  configure.ac  dscrobbler.c  dscrobbler.xml  main.c  scrobbler.py  server.py  test.sh
data/: Makefile.am  dscrobbler.xml
src/: Makefile.am  dentry.c  dentry.h  dscrobbler.c  dscrobbler.h  mafw-lastfm-scrobbler.c  mafw-lastfm-scrobbler.h  main.c  marshal.list
