pydir = $(pkgdatadir)
dist_py_DATA = scrobbler.py server.py

servicedir = $(datadir)/dbus-1/services
dist_service_DATA = com.burtonini.Scrobbler.service

MAINTAINERCLEANFILES = \
	com.burtonini.Scrobbler.service \
	aclocal.m4 \
	configure \
	install-sh \
	INSTALL \
	Makefile.in \
	Makefile \
	missing
