pydir = $(pkgdatadir)
dist_py_SCRIPTS = scrobbler.py server.py

servicedir = $(datadir)/dbus-1/services
dist_service_DATA = com.burtonini.Scrobbler.service

EXTRA_DIST = dscrobbler.xml

MAINTAINERCLEANFILES = \
	com.burtonini.Scrobbler.service \
	aclocal.m4 \
	configure \
	install-sh \
	INSTALL \
	Makefile.in \
	Makefile \
	missing
